[package]
name = "blast_gapalign"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the NCBI BLAST+ gapped alignment algorithm"
repository = "https://github.com/rmhubley/BLAST_gapalign"
authors = [
    "NCBI BLAST+ team (original algorithm)",
    "Robert Hubley <rhubley@systemsbiology.org>",
]

[lib]
name = "blast_gapalign"
path = "src/lib.rs"

[dependencies]
